objects/MongoDB_Repos__x.object
<CustomObject>
    <description>MongoDB Repos</description>
    <externalDataSource>MongoDB_Adapter</externalDataSource>
    <externalName>MongoDB Repos</externalName>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <referenceTargetField>Account.Invoice_Id__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MongoDB Repos</relationshipLabel>
        <relationshipName>MongoDB_Repos</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount</description>
        <externalDeveloperName>Amount</externalDeveloperName>
        <label>Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>MongoDB Repos</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>MongoDB Repos</pluralLabel>
</CustomObject>